@@ -3,6 +3,7 @@ Hans Breuer
 Bulia Byak
 Chema Celorio
 Zbigniew Chyla
+Kees Cook
 Robert Crosbie
 Jon Cruz
 Danilo Egan
